test/e2e/fail/004-missing-field/input.tjs
type Pair<A, B> = { first: A, second: B };

let p: Pair<Int, Int> = { first: 2, second: 2 };
print(p.c);
